# Machine-Learning-6-SIN-A-Mar-Jul-2026

./: .gitignore  Copia_Gonzalo_linear_regression_taxi.ipynb  Linear_Regression.ipynb  Logistic_Regression.ipynb  README.md  README_evaluacion_estudiantes.md  Red_Neuronal_con_regresión_lineal.ipynb  evaluacion_titanic.ipynb  loss.ipynb  pyproject.toml  workshop0.ipynb  workshop1.ipynb
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  requirements.txt
notebooks/: exam.ipynb  main.ipynb
src/: scale.py
