[project]
name = "machine-learning-6-sin-a-mar-jul-2026"
version = "0.1.0"
description = "Linear & Logical regression for Wine Quality DataSet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
